feat(ReAct+): expand ReAct+ agent strategy
Progressive enhancement of the ReAct+ execution framework with additional agents, shared utilities, and context upgrades:

**ReAct+ Agent Expansion**
- Add ActionPlusAgent, PlanInitAgent, ThinkingPlusAgent for richer ReAct+ task orchestration
- Strengthen TaskAnalysisAgent and ThoughtAgent collaboration workflow
- Update ReActPlusAgentStrategy to enlist the new agent lineup

**Utility Layer**
- Introduce FunctionUtils to standardize function-call payload construction
- Enhance AgentUtils, FluxUtils, PromptUtils with new ReAct+ helpers

**Context & Event Updates**
- Extend ReActPlusAgentContext, ReActPlusAgentContextMeta, TaskModeMeta with action/plan metadata
- Update AgentContextAble interface for multi-mode support
- Revise AgentExecutionEvent and AgentMessage to emit mode-aware events

**Configuration**
- Wire new agents into ApplicationAgentAutoConfiguration and DefaultAgentDispatcher
- Refresh TaskAnalysisTool and related beans for ReAct+ compatibility

**Impact**
- ReAct+ workflow now coordinates multi-stage planning (init → analysis → thinking → action)
- Function-call payloads are standardized for downstream integration
- Breaking change: consumers must adapt to new AgentExecutionEvent fields and agent registrations

逐步增强 ReAct+ 执行框架，新增代理、共享工具类与上下文升级：

**ReAct+ Agent 扩展**
- 新增 ActionPlusAgent、PlanInitAgent、ThinkingPlusAgent，完善多阶段任务编排
- 强化 TaskAnalysisAgent 与 ThoughtAgent 的协同流程
- 更新 ReActPlusAgentStrategy 以纳入新的 Agent 阵列

**工具层**
- 新增 FunctionUtils，统一 function-call 载荷构造
- 增强 AgentUtils、FluxUtils、PromptUtils，补充 ReAct+ 支撑能力

**上下文与事件更新**
- 扩展 ReActPlusAgentContext、ReActPlusAgentContextMeta、TaskModeMeta，记录动作/规划元信息
- 调整 AgentContextAble 接口，实现多模式上下文兼容
- 修改 AgentExecutionEvent 与 AgentMessage，输出模式感知事件

**配置**
- 在 ApplicationAgentAutoConfiguration、DefaultAgentDispatcher 中装配新 Agent
- 重构 TaskAnalysisTool 及相关 Bean 以适配 ReAct+

**影响范围**
- ReAct+ 流程现已覆盖计划初始化 → 分析 → 思考 → 执行的多阶段协调
- Function-call 载荷统一，利于后续系统集成
- 破坏性变更：调用方需适配新的 AgentE